# rust-starter

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 20240101000001_create_users_table.sql
src/: config.rs  main.rs  routes.rs
src/handlers/: auth_handler.rs  health_handler.rs  mod.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs
src/models/: auth.rs  mod.rs  user.rs
src/repositories/: user_repository.rs
src/services/: auth_service.rs  mod.rs
